# critical-success

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.c  messages.h  mt19937.h
